[project]
name = "starprompt"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.4",
    "ftfy>=6.3.1",
    "gpustat>=1.1.1",
    "kornia>=0.7.0",
    "numpy>=2.2.4",
    "onedrivedownloader>=1.1.3",
    "pillow>=11.1.0",
    "pyyaml>=6.0.2",
    "regex>=2024.11.6",
    "sentencepiece>=0.2.0",
    "timm==0.9.8",
    "torch>=2.1.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
extra = [
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.4",
    "clip",
    "decorator>=5.2.1",
    "deeplake<3.9",
    "googledrivedownloader==0.4",
    "kmeans-pytorch>=0.3",
    "onedrivedownloader==1.1.3",
    "pandas>=2.2.3",
    "quadprog==0.1.11",
    "scikit-learn>=1.6.1",
    "setproctitle==1.3.2",
    "timm==0.9.8",
    "transformers>=4.50.3",
    "wandb>=0.19.9",
    "xitorch>=0.5.1",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }

[tool.uv.workspace]
members = ["docs"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
